--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
   "name": "napcat-plugin-openclaw",
+  "plugin": "OpenClaw AI Channel",
   "version": "1.0.0",
-  "description": "NapCat 插件 - 连接 OpenClaw Agent 执行群任务",
-  "main": "index.mjs",
   "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "dev": "tsc && node dist/index.mjs"
-  },
+  "main": "index.mjs",
+  "description": "将 QQ 变为 OpenClaw AI 助手通道，支持私聊/群聊、斜杠命令、输入状态",
+  "author": "CharTyr",
+  "license": "MIT",
   "keywords": [
     "napcat",
     "plugin",
-    "openclaw"
+    "qq",
+    "openclaw",
+    "ai"
   ],
-  "author": "Seren",
-  "license": "MIT",
   "napcat": {
-    "name": "OpenClaw 任务助手",
-    "description": "通过 OpenClaw Agent 执行群任务（代码、查询、翻译等）",
-    "version": "1.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0"
+    "tags": ["AI", "工具", "自动化"],
+    "minVersion": "4.14.0",
+    "homepage": ""
   },
   "dependencies": {
     "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@types/node": "^20.19.33",
+    "@types/ws": "^8.5.10",
+    "napcat-types": "0.0.16",
+    "typescript": "^5.9.3",
+    "vite": "^6.4.1"
+  },
+  "scripts": {
+    "build": "vite build",
+    "watch": "vite build --watch",
+    "dev": "vite build --watch",
+    "typecheck": "tsc --noEmit"
   }
 }
